# photonics_paper

./: .gitignore  .gitmodules  README.md  contributors_with_affiliation.csv  example_considerations.md  get_gdsfactory_contributors.py  myst.yml  paper.md  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: 00_myst_tests.ipynb  basics.ipynb  yaml_flow.ipynb
util/: contributors.csv
